--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -15,10 +15,17 @@ Link:<a href="@Model.Link">@Model.Link</a>
 <br />
 Payout: @Model.CostCurrency@Model.Cost
 <br />
-Payout to Direct Agents: @Model.RevenueCurrency@Model.Revenue
+<b>Restrictions:</b>
+@if (Model.Restrictions != null) { <br />@MvcHtmlString.Create(Model.RestrictionsHtml) }
 <br />
 <b>Important Details:</b>
-@if (Model.ImportantDetailsMvcHtmlString != null) { <br />@Model.ImportantDetailsMvcHtmlString }
+@if (Model.ImportantDetails != null) { <br />@MvcHtmlString.Create(Model.ImportantDetailsHtml) }
+<br />
+Budget: @Model.Budget
+<br />
+Payout to Direct Agents: @Model.RevenueCurrency@Model.Revenue
+<br />
+Passed Information: @Model.PassedInfo
 <br />
 Campaign Cap: @Model.CampaignCap
 <br />
@@ -28,6 +35,3 @@ EOM Info: @Model.EomNotes
 <br />
 Countries: @Model.CountryCodes
 <br />
-@*
-Campaign Budget: 100 leads per day until further notice. 
-*@
