field display updates (old wiki fields imported)

--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
@@ -15,7 +15,7 @@
                 <td><input type="text" data-bind="value:PayableAction" name="PayableAction" /></td>
             </tr>
             <tr>
-                <td class="fieldName">Important Details:</td>
+                <td class="fieldName">Wiki Details:</td>
                 <td><textarea data-bind="value:ImportantDetails" name="ImportantDetails"></textarea></td>
             </tr>
             <tr>
@@ -27,7 +27,7 @@
                 <td><input type="text" data-bind="value:PassedInfo" name="PassedInfo" /></td>
             </tr>
             <tr>
-                <td class="fieldName">Campaign Cap:</td>
+                <td class="fieldName">Lead Caps:</td>
                 <td><input type="text" data-bind="value:CampaignCap" name="CampaignCap" /></td>
             </tr>
             <tr>
@@ -61,7 +61,7 @@
             <dd>${CostCurrency}${Cost}</dd>
             <dt>Restrictions:</dt>
             <dd style="overflow: auto">#= RestrictionsHtml #</dd>
-            <dt>Details:</dt>
+            <dt>Wiki Details:</dt>
             <dd style="overflow: auto">#= ImportantDetails #</dd>
             <dt>Budget:</dt>
             <dd>${Budget}</dd>
@@ -69,7 +69,7 @@
             <dd>${RevenueCurrency}${Revenue}</dd>
             <dt>Passed Info:</dt>
             <dd>${PassedInfo}</dd>
-            <dt>Cap:</dt>
+            <dt>Lead Caps:</dt>
             <dd>${CampaignCap}</dd>
             <dt>Scrub:</dt>
             <dd>${ScrubPolicy}</dd>
