fixup countrylookup; css tweaks

--- a/1/EomTool/EomToolWeb/Content/KendoSkin.css
+++ b/1/EomTool/EomToolWeb/Content/KendoSkin.css
@@ -234,7 +234,7 @@ textarea.k-textbox:hover,
 .k-ghost-splitbar-horizontal,
 .k-draghandle.k-state-selected:hover {
   color: #ffffff;
-  background-color: #00b050;
+  background-color: #9bcf47;
   border-color: #f0713a;
 }
 .k-state-selected.k-state-focused,
