round cost to nearest .25; increase campaign name font size

--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_List.tmpl.htm
@@ -129,7 +129,7 @@
         margin: 0;
         padding: 10px 10px 10px 15px;
         color: #333;
-        font-size: smaller;
+        font-size: small;
         float: left;
         max-width: 300px;
         background-color: rgb(239, 238, 239);
