status and hidden

--- a/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Show.cshtml
@@ -36,3 +36,7 @@ EOM Info: @Model.EomNotes
 <br />
 Countries: @Model.CountryCodes
 <br />
+Status: @Model.Status
+<br />
+Hidden: @Model.Hidden
+<br />
