--- a/1/EomTool/EomToolWeb/Views/Campaigns/Filter.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Campaigns/Filter.cshtml
@@ -8,16 +8,16 @@
 </div>
 
 <div id="ExtraInfo">
+    <a href="#" onclick="ChangeFilter(true, true, '@(Model.ListViewMode.TemplateName.ToLower() != "brief" ? "Brief" : "List")'); return false">Switch Mode</a>
     @if (Model.Country != null)
     {
-        <text>Country: @Model.Country.Name</text>
-        <a href="#" onclick="ChangeFilter(true, false); return false">Show all</a>
+        <text>| Country: @Model.Country.Name (<a href="#" onclick="ChangeFilter(true, false); return false">Show all</a>)</text>
     }
 </div>
 
 <script type="text/javascript">
 
-    function ChangeFilter(reloadPage, keepCountry) {
+    function ChangeFilter(reloadPage, keepCountry, mode) {
         var dataItem = $('#verticals').data("kendoDropDownList").dataItem();
         var vertical = '';
         if (dataItem.VerticalId != '') vertical = dataItem.Name;
@@ -49,6 +49,8 @@
             $('#MenuAll').removeClass("selitem");
 
         var url = '?vertical=' + vertical + '&traffictype=' + traffictype + '&search=' + search + '&country=' + country + '&pid=';
+        if (mode) url = url + '&mode=' + mode;
+
         if (reloadPage) {
             url = '@Url.Action("List2")' + url;
             document.location.href = url;
