--- a/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
+++ b/1/EomTool/EomToolWeb/Templates/Campaigns/_Brief.tmpl.htm
@@ -6,11 +6,11 @@
         </div>
         <div class="edit-buttons">
             <a class="k-button k-button-icontext k-edit-button" style="float: right; width: 20px; border-top: 0px; border-right: 0px" href="\\#"><span class="k-icon k-edit" style="margin-left: -5px"></span></a>
-            <a href="\\#" style="float: right" onclick="Expand(${Pid}); return false">expand</a>
+            <a href="\\#" style="float: right" onclick="Expand(${Pid}, this); return false"># if(Edited){ #collapse# }else{ #expand# } #</a>
         </div>
         <h3>${Name}</h3>
         <div>${Description}</div>
-        <table class="expandTable" #if(!Edited){# style="display:none" #}#>
+        <table class="expandTable"# if(!Edited){ # style="display:none"# } #>
             <tr>
                 <td class="fieldName">Payable Action:</td>
                 <td>${PayableAction}</td>
