--- a/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
@@ -1,38 +1,52 @@
 ﻿@model LTWeb.Models.QuestionVM
 
-@{
-    ViewBag.Title = "Show";
-}
-
-<h2>Show</h2>
-
 @Model.Text<br />
 
-@switch (Model.AnswerType)
+@using (Html.BeginForm("Save", "Questions", FormMethod.Post, new { id = "questionForm" }))
 {
-    case "dropdown":
-        <select>
-        @foreach (var option in Model.Options)
-        {
-            <option>@option</option>
-        }
-        </select>
-    break;
-    case "radio":
-        foreach (var option in Model.Options)
-        {
-            <input type="radio" />@option<br />
-        }
-    break;
-    case "3part":
-        <input type="text" />
-        <input type="text" />
-        <input type="text" />
-    break;
-    default:
-        <input type="text" />
-    break;
+    @Html.Hidden("QuestionKey", Model.Key)
+    switch (Model.AnswerType)
+    {
+        case "dropdown":
+            <select name="@Model.Key">
+            @foreach (var option in Model.Options)
+            {
+                <option value="@option.Value">@option.Text</option>
+            }
+            </select>
+            break;
+        case "radio":
+            foreach (var option in Model.Options)
+            {
+                <input type="radio" name="@Model.Key" value="@option.Value" />@option.Text<br />
+            }
+            break;
+        case "3part":
+            <input name="@Model.Key" type="text" />
+    <!--        <input type="text" />
+            <input type="text" />-->
+            break;
+        default:
+            <input name="@Model.Key" type="text" />
+            break;
+    }
 }
 
-<br /><br />
+<input type="button" value="Save" onclick="Save()" />
 @Html.ActionLink("Next", "Show", new { q = Model.NextQuestionIndex })
+<br /><br />
+@Html.ActionLink("Save All", "SaveAll")
+
+<script type="text/javascript">
+    function Save() {
+        var form = $('#questionForm');
+        $.ajax({
+            type: "POST",
+            url: form.attr('action'),
+            data: form.serialize(),
+            success: function (response) {
+                //alert('success!');
+            }
+        });
+    }
+</script>
