working on question dependencies

--- a/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
+++ b/2/LendingTree/LTWeb/Views/Questions/Show.cshtml
@@ -30,8 +30,11 @@
             <input name="@Model.Key" type="text" />
             break;
     }
+    <br />
+    <input type="submit" value="Save and Continue" />
 }
 
+<br />
 <input type="button" value="Save" onclick="Save()" />
 @Html.ActionLink("Next", "Show", new { q = Model.NextQuestionIndex })
 <br /><br />
